styles: change app icon